--- a/pages/about.html
+++ b/pages/about.html
@@ -43,13 +43,14 @@
                             <li>
                                 <a href="../index.html">Home</a>
                             </li>
-                            <li><a href="./about.html">About Us</a></li>
-                            <li>
-                                <a href="./publications.html">Publications</a>
-                            </li>
                             <li>
                                 <a href="./research.html">Research</a>
                             </li>
+                            <li>
+                                <a href="./publications.html">Publications</a>
+                            </li>
+                            
+                            <li><a href="./about.html">Our Team</a></li>
                             <li>
                                 <a href="./contact.html">Contact Us</a>
                             </li>
@@ -75,7 +76,7 @@
                                 >
                                     <li><a href="../index.html">Home</a></li>
                                     <li>
-                                        <a href="./about.html">About Us</a>
+                                        <a href="./about.html">Our Team</a>
                                     </li>
                                     <li>
                                         <a href="./publications.html"
@@ -97,15 +98,15 @@
         </nav>
         <!-- Navbar Starts here -->
 
-        <!-- About us starts here -->
-        <section class="uk-section uk-section-xlarge">
+        <!-- Our Team starts here -->
+        <!-- <section class="uk-section uk-section-xlarge">
             <div class="uk-container">
                 <div class="uk-grid-match uk-child-width-1-3@m" uk-grid>
                     <div
                         class="uk-panel uk-padding uk-padding-remove-vertical uk-width-1-3@m"
                     >
                         <div class="uk-text-bolder uk-h1 uk-text-primary">
-                            ABOUT US
+                            About Us
                         </div>
                         <div class="">
                             <p>
@@ -145,8 +146,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- About us ends here -->
+        </section> -->
+        <!-- Our Team ends here -->
 
         <!-- Our team starts here -->
         <section class="uk-section">
