--- a/pages/contact.html
+++ b/pages/contact.html
@@ -52,7 +52,7 @@
                     <div class="uk-navbar-right">
                         <ul class="uk-navbar-nav uk-visible@m">
                             <li><a href="../index.html">Home</a></li>
-                            <li><a href="./about.html">About Us</a></li>
+                            <li><a href="./about.html">Our Team</a></li>
                             <li>
                                 <a href="./publications.html">Publications</a>
                             </li>
@@ -84,7 +84,7 @@
                                 >
                                     <li><a href="../index.html">Home</a></li>
                                     <li>
-                                        <a href="./about.html">About Us</a>
+                                        <a href="./about.html">Our Team</a>
                                     </li>
                                     <li>
                                         <a href="./publications.html"
