--- a/pages/research.html
+++ b/pages/research.html
@@ -40,7 +40,7 @@
                     <div class="uk-navbar-right">
                         <ul class="uk-navbar-nav uk-visible@m">
                             <li><a href="../index.html">Home</a></li>
-                            <li><a href="./about.html">About Us</a></li>
+                            <li><a href="./about.html">Our Team</a></li>
                             <li>
                                 <a href="./publications.html">Publications</a>
                             </li>
@@ -72,7 +72,7 @@
                                 >
                                     <li><a href="../index.html">Home</a></li>
                                     <li>
-                                        <a href="./about.html">About Us</a>
+                                        <a href="./about.html">Our Team</a>
                                     </li>
                                     <li>
                                         <a href="./publications.html"
